<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".AccountInfoActivity">

    <Button
        android:id="@+id/account_info_add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_add_button_text"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:visibility="visible" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/account_info_add_button">

        <TextView
            android:id="@+id/account_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignBottom="@+id/account_name_edit"
            android:text="@string/account_name_label_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/account_name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/account_name_label" />

        <TextView
            android:id="@+id/account_balance_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignBottom="@+id/account_balance_edit"
            android:text="@string/account_balance_label_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/account_balance_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/account_name_edit"
            android:layout_toEndOf="@+id/account_balance_label" />

        <TextView
            android:id="@+id/account_description_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignBottom="@+id/account_description_edit"
            android:text="@string/account_description_label_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/account_description_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/account_balance_edit"
            android:layout_toEndOf="@+id/account_description_label" />

    </RelativeLayout>

</RelativeLayout>