<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Spinner
        android:id="@+id/dialog_list_item_account_delete_spinner_heirs"
        android:spinnerMode="dropdown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/dialog_list_item_account_delete_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_list_item_account_delete_button_text" />

</LinearLayout>