<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".AccountListActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/account_buttons_view">

        <ImageButton

            android:layout_width="@dimen/list_activity_action_button_size"
            android:layout_height="@dimen/list_activity_action_button_size"
            android:id="@+id/account_list_add_button"

            android:background="@android:drawable/ic_input_add"
            android:contentDescription="@string/account_list_add_button_description"

            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />

        <ImageButton

            android:layout_width="@dimen/list_activity_action_button_size"
            android:layout_height="@dimen/list_activity_action_button_size"
            android:id="@+id/account_list_refresh_button"

            android:background="@android:drawable/ic_popup_sync"
            android:contentDescription="@string/account_list_refresh_button_description"

            android:layout_alignParentTop="true"
            android:layout_toStartOf="@id/account_list_add_button" />

    </RelativeLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/account_list_view"
        android:layout_below="@id/account_buttons_view">

    </ListView>

</RelativeLayout>