<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".OperationInfoActivity">

    <Button
        android:id="@+id/activity_info_operation_add_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_info_operation_add_button_text"
        android:visibility="visible"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/activity_info_operation_add_button">

        <TextView
            android:id="@+id/activity_info_operation_type_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/activity_info_operation_type_label"
            android:layout_alignBottom="@+id/activity_info_operation_type_spinner"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/activity_info_operation_type_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@id/activity_info_operation_type_label" />

        <TextView
            android:id="@+id/activity_info_operation_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignBottom="@+id/activity_info_operation_date_picker"
            android:text="@string/activity_info_operation_date_label_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/activity_info_operation_date_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_info_operation_date_picker_default_text"
            android:layout_below="@+id/activity_info_operation_type_spinner"
            android:layout_toEndOf="@+id/activity_info_operation_date_label"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:gravity="center_horizontal" />

        <TextView
            android:id="@+id/activity_info_operation_value_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignBottom="@+id/activity_info_operation_value_edit"
            android:text="@string/activity_info_operation_value_label_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/activity_info_operation_value_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/activity_info_operation_date_picker"
            android:layout_toEndOf="@+id/activity_info_operation_value_label"/>

        <TextView
            android:id="@+id/activity_info_operation_source_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/activity_info_operation_source_label"
            android:layout_alignBottom="@+id/activity_info_operation_source_spinner"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/activity_info_operation_source_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/activity_info_operation_value_edit"
            android:layout_toEndOf="@id/activity_info_operation_source_label" />

        <TextView
            android:id="@+id/activity_info_operation_target_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/activity_info_operation_target_label"
            android:layout_alignBottom="@+id/activity_info_operation_target_spinner"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/activity_info_operation_target_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/activity_info_operation_source_spinner"
            android:layout_toEndOf="@id/activity_info_operation_target_label" />

        <TextView
            android:id="@+id/activity_info_operation_description_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignBottom="@+id/activity_info_operation_description_edit"
            android:text="@string/account_description_label_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/activity_info_operation_description_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/activity_info_operation_target_spinner"
            android:layout_toEndOf="@+id/activity_info_operation_description_label"/>

    </RelativeLayout>

</RelativeLayout>