...
        android:layout_below="@id/activity_list_operations_search_activity_widget">

        <ImageButton

            android:layout_width="@dimen/list_activity_action_button_size"
            android:layout_height="@dimen/list_activity_action_button_size"
            android:id="@+id/activity_list_operations_add_button"

            android:background="@android:drawable/ic_input_add"
            android:contentDescription="@string/activity_list_operations_add_button_description"

            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />
...
