...
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <ImageButton
            android:id="@+id/list_item_operation_remove"
            android:contentDescription="@string/list_item_operation_remove_button_description"
            android:background="@android:drawable/ic_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageButton
...
